--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
 		"commonjs": true,
         "es2022": true,
 		"node": true,
-		"jest": true
+		"mocha": true
 	},
 	"parserOptions": {
         "ecmaFeatures": {
