--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "VS64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "2.5.2",
+	"version": "2.5.3",
 	"preview": false,
 	"publisher": "rosc",
 	"license": "SEE LICENSE IN LICENSE",
@@ -13,10 +13,9 @@
 	"homepage": "https://github.com/rolandshacks/vs64",
 	"private": true,
 	"engines": {
-		"vscode": "^1.73.0"
+		"vscode": "^1.85.0"
 	},
-	"main": "./main.js",
-	"bin": "main.js",
+	"main": "./src/extension/main.js",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/rolandshacks/vs64"
@@ -34,12 +33,12 @@
 		"vscode-cpptools": "^6.1.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.11",
-		"@types/vscode": "^1.73.0",
+		"@types/node": "^18.x",
+		"@types/vscode": "^1.85.0",
 		"@vscode/vsce": "^2.22.0",
 		"eslint": "^8.29.0",
 		"jest": "^29.5.0",
-		"typescript": "^3.6.2"
+		"typescript": "^5.3.3"
 	},
 	"galleryBanner": {
 		"color": "#6c9fd2",
