--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "VS64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "2.5.8",
+	"version": "2.5.9",
 	"preview": false,
 	"publisher": "rosc",
 	"license": "SEE LICENSE IN LICENSE",
@@ -26,6 +26,7 @@
 		"test": "jest --runInBand --config ./test/jest.config.js",
 		"coverage": "jest --coverage --runInBand --config ./test/jest.config.js",
 		"vsix": "vsce package --no-yarn --dependencies",
+		"publish": "vsce publish",
 		"esbuild": "node build.js"
 	},
 	"dependencies": {
