--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "VS64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "2.5.10",
+	"version": "2.5.11",
 	"preview": false,
 	"publisher": "rosc",
 	"license": "SEE LICENSE IN LICENSE",
@@ -83,7 +83,7 @@
 		"commands": [
 			{
 				"command": "vs64.mountD64FileSystem",
-				"title": "Mount",
+				"title": "Mount Disk",
 				"category": "VS64"
 			},
 			{
